test/fixtures/diagnostics/type-checker/negative/structural-discriminant-impossible/input.tysh
namespace Samples.TypeChecker.StructuralDiscriminantImpossible

type CircleShape = { kind: "circle", radius: double }
type SquareShape = { kind: "square", side: double }
type Shape = CircleShape | SquareShape

fun impossible(shape: Shape): string =
  if shape.kind == "triangle" {
    "bad"
  } else {
    "ok"
  }
